Implementação do sistema de filtro tabela usuario

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "z:\\2º SEMESTRE\\TI211 - Técnicas de Programação II\\sqljdbc_12.4\\ptb\\jars\\mssql-jdbc-12.4.2.jre11.jar"
+        "z:\\2º SEMESTRE\\TI211 - Técnicas de Programação II\\sqljdbc_12.4\\ptb\\jars\\mssql-jdbc-12.4.2.jre11.jar",
+        "c:\\Program Files\\Java\\Java drivers\\sqljdbc_12.4\\ptb\\jars\\mssql-jdbc-12.4.2.jre8.jar"
     ]
 }
